...
class _EmailFieldState extends State<EmailField> {
  @override
  Widget build(BuildContext context) {
    final theme = Theme.of(context);
    final size = MediaQuery.of(context).size;
    return TextFormField(
      key: const Key("email_input"),
      focusNode: widget.focus,
      onFieldSubmitted: (_) => widget.onSubmitted(),
      validator: (value) {
        if (value == null || value.isEmpty) {
          return 'Please enter an email';
        }
...
