...
  @override
  Widget build(BuildContext context) {
    final theme = Theme.of(context);
    final size = MediaQuery.of(context).size;

    return TextFormField(
      key: const Key("password_input"),
      focusNode: widget.focus,
      validator: (value) {
        if (value == null || value.isEmpty || value.length < 8) {
          return 'Please enter a valid password';
        }
        return null;
...
