...
                          },
                          builder: (context, state) {
                            if (state is SignUpLoadingState) {
                              return CircularProgressIndicator();
                            }
                            return InkWell(
                              key: const Key("sign_up_btn"),
                              borderRadius: BorderRadius.circular(
                                Constants.regularRadius,
                              ),
                              onTap: () => _validateAndProceed(),
                              child: Container(
                                decoration: BoxDecoration(
...
